--- a/src/component/header/style/module/_nav.scss
+++ b/src/component/header/style/module/_nav.scss
@@ -5,12 +5,15 @@
 
 #{ns(header)} {
   #{ns(nav)} {
+    &__list {
+      @include margin(0 -4v);
+    }
+
     @include respond-from(lg) {
       justify-content: flex-start;
 
       &__list {
         max-width: calc(100% + #{space(4v)});
-        @include margin(0 -4v);
       }
     }
   }
